--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,12 +1,13 @@
 .side-bar
   .side-bar__user-name
+    =current_user.name
     .side-bar__user-name__box
       .side-bar__user-name__box__name
         masa
       .side-bar__user-name__box__icon
         = link_to "#" do
           = icon('far', 'edit')
-        = link_to "#" do
+        = link_to edit_user_path(current_user) do
           = icon('fas', 'cog')
   .side-bar__group-list
     .side-bar__group-list__name
