DB設計　　グループ作成

--- a/app/assets/stylesheets/modules/_side-bar.scss
+++ b/app/assets/stylesheets/modules/_side-bar.scss
@@ -30,10 +30,10 @@
       text-decoration: none;
       color: #ffffff;
     }
-    &__name {
+    .group__name {
       font-size: 15px;
     }
-    &__message {
+    .group__message {
       font-size: 11px;
       padding: 5px 20px 40px 0px;
     }
