--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,14 +5,15 @@
       .side-bar__user-name__box__name
         masa
       .side-bar__user-name__box__icon
-        = link_to "#" do
+        = link_to new_group_path do
           = icon('far', 'edit')
         = link_to edit_user_path(current_user) do
           = icon('fas', 'cog')
   .side-bar__group-list
-    .side-bar__group-list__name
+    -current_user.groups.each do |group|
+      .group
       = link_to "#" do
-        ="techcamp"
-    .side-bar__group-list__message
-      = link_to "#" do
-        ="まだメッセージがありません"
+        .group__name
+          = group.name
+        .group__message
+          まだメッセージがありません。
