--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,32 +1,22 @@
 .chat-main 
   .chat-main__group-info
     .chat-main__group-info__text
-      test
+      =@group.name
       .chat-main__group-info__text__member
-        Member : masa
-    =link_to "#" do
+        Member: 
+        - @group.users.each do |group_user|
+          = group_user.name
+    =link_to edit_group_path(current_user) do
       ="Edit"
   .chat-main__message-list
-    .chat-main__message-list__box
-      .chat-main__message-list__box__name
-        masa 
-      .chat-main__message-list__box__date
-        2019/11/20(Wed) 17:43:01
-    .chat-main__message-list__text
-      おはよう！
-    .chat-main__message-list__bigbox
-      .chat-main__message-list__bigbox__name
-        masa
-      .chat-main__message-list__bigbox__date
-        2019/11/20(Wed) 17:43:34
-    .chat-main__message-list__bigtext
-      今日は夜から雨
+    = render @messages
   .chat-main__group-message-form
-    %form.new_message
-      .input-box
-        %input{type: "text", class: "input-box__text", placeholder: "type a message"}
-        %label{class: "input-box__image"}
-          = icon('fas', 'image')
-          %input{type: "file", class: "input-box__image__file"}
-      %input{type: "submit", class: "submit-btn", value: "Send"}
+    .new_message.form
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+        .form__mask
+          =f.label :image, class: 'form__mask__image' do
+            = icon('fas', 'image')
+            = f.file_field :image, class: 'hidden' 
+        = f.submit 'Send', class: 'form__submit'
     
