--- a/app/assets/stylesheets/modules/_main-chat.scss
+++ b/app/assets/stylesheets/modules/_main-chat.scss
@@ -52,23 +52,6 @@
       font-size: 14px;
       margin-bottom: 46px;
     }
-    &__bigbox {
-      display: flex;
-      margin-bottom: 12px;
-      &__name {
-        color: #333333;
-        font-size: 16px;
-      }
-      &__date{
-        color: #999999;
-        font-size: 12px;
-        margin-left: 10px;
-      }
-    }
-    &__bigtext {
-      color: #434A54;
-      font-size: 14px;
-    }
   }
   &__group-message-form {
     background-color: #d2d2d2;
@@ -76,25 +59,25 @@
     form {
       display: flex;
       padding: 20px 40px;
-      .input-box {
+      .form__message {
         width: 100%;
         display: flex;
         position: relative;
-        &__text {
-          padding: 0 10px;
-          width: 100%;
-          height: 50px;
-        }
+        padding: 0 10px;
+        width: 100%;
+        height: 50px;
+      }
+      .form__mask{
         &__image{
           position: absolute;
-          right: 10px;
+          right: 155px;
           line-height: 50px;
-          &__file{
+        .hidden{
             display: none;
           }
         }
       }
-      .submit-btn {
+      .form__submit {
         width: 100px;
         margin-left: 15px;
         background-color: #38aef0;
