--- a/app/assets/stylesheets/modules/_main-chat.scss
+++ b/app/assets/stylesheets/modules/_main-chat.scss
@@ -34,6 +34,7 @@
     background-color: #fafafa;
     height: calc(100vh - 100px - 90px);
     padding: 35px 0px 0px 40px;
+    overflow: scroll;
     &__box {
       display: flex;
       margin-bottom: 12px;
@@ -51,6 +52,10 @@
       color: #434A54;
       font-size: 14px;
       margin-bottom: 46px;
+    }
+    .lower-message__image {
+      width: 250px;
+      height: 150px;
     }
   }
   &__group-message-form {
