インクリメンタルサーチ

--- a/app/assets/stylesheets/modules/_main-chat.scss
+++ b/app/assets/stylesheets/modules/_main-chat.scss
@@ -51,11 +51,7 @@
     &__text {
       color: #434A54;
       font-size: 14px;
-      margin-bottom: 46px;
-    }
-    .lower-message__image {
-      width: 250px;
-      height: 150px;
+      padding-bottom: 46px;
     }
   }
   &__group-message-form {
