自動更新の実装

--- a/app/assets/stylesheets/modules/_side-bar.scss
+++ b/app/assets/stylesheets/modules/_side-bar.scss
@@ -26,6 +26,7 @@
     background-color: #2f3e51;
     height: calc(100vh - 100px);
     padding: 20px 20px 0px 20px;
+    overflow: scroll;
     a {
       text-decoration: none;
       color: #ffffff;
