--- a/app/assets/stylesheets/modules/_main-chat.scss
+++ b/app/assets/stylesheets/modules/_main-chat.scss
@@ -35,9 +35,11 @@
     height: calc(100vh - 100px - 90px);
     padding: 35px 0px 0px 40px;
     overflow: scroll;
+      padding-bottom: 46px;
+    }
     &__box {
       display: flex;
-      margin-bottom: 12px;
+      padding-bottom: 12px;
       &__name {
         color: #333333;
         font-size: 16px;
@@ -49,9 +51,12 @@
       }
     }
     &__text {
-      color: #434A54;
-      font-size: 14px;
       padding-bottom: 46px;
+      
+    }
+    p.lower-message__content {
+        color: #434A54;
+        font-size: 14px;
     }
   }
   &__group-message-form {
