--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -6,7 +6,7 @@
         Member: 
         - @group.users.each do |group_user|
           = group_user.name
-    =link_to edit_group_path(current_user) do
+    =link_to edit_group_path(@group) do
       ="Edit"
   .chat-main__message-list
     = render @messages
