デプロイ　再

--- a/app/assets/stylesheets/modules/_main-chat.scss
+++ b/app/assets/stylesheets/modules/_main-chat.scss
@@ -35,6 +35,7 @@
     height: calc(100vh - 100px - 90px);
     padding: 35px 0px 0px 40px;
     overflow: scroll;
+    .message {
       padding-bottom: 46px;
     }
     &__box {
